<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size3"
        android:elevation="@dimen/size5"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="@dimen/size150"
                android:layout_height="@dimen/size150"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size5"
                android:layout_marginTop="@dimen/size10"
                android:id="@+id/news_title"
                android:textColor="#c70d0d"
                android:textSize="15sp"
                android:text="Head Line"
                android:fontFamily="sans-serif"
               />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>